// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="page page-limited portfolio-overview"
>
  <div
    className="page-actions"
  >
    <Connect(withCurrentUser(Connect(ComponentReportActions)))
      component={
        Object {
          "breadcrumbs": Array [],
          "description": "accurate description",
          "key": "foo",
          "name": "Foo",
          "qualifier": "VW",
          "qualityGate": Object {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": Array [
            Object {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": Array [],
        }
      }
    />
  </div>
  <div
    className="portfolio-description display-inline-block big-spacer-bottom"
  >
    accurate description
  </div>
  <h1>
    portfolio.health_factors
  </h1>
  <div
    className="portfolio-boxes"
  >
    <MetricBox
      component="foo"
      measures={
        Object {
          "lines": "173",
          "reliability_rating": "1",
        }
      }
      metricKey="releasability"
    />
    <MetricBox
      component="foo"
      measures={
        Object {
          "lines": "173",
          "reliability_rating": "1",
        }
      }
      metricKey="reliability"
    />
    <MetricBox
      component="foo"
      measures={
        Object {
          "lines": "173",
          "reliability_rating": "1",
        }
      }
      metricKey="vulnerabilities"
    />
    <MetricBox
      component="foo"
      measures={
        Object {
          "lines": "173",
          "reliability_rating": "1",
        }
      }
      metricKey="security_hotspots"
    />
    <MetricBox
      component="foo"
      measures={
        Object {
          "lines": "173",
          "reliability_rating": "1",
        }
      }
      metricKey="maintainability"
    />
  </div>
  <h1>
    portfolio.breakdown
  </h1>
  <div
    className="portfolio-breakdown"
  >
    <div
      className="portfolio-breakdown-box"
    >
      <h2
        className="text-muted small"
      >
        portfolio.number_of_projects
      </h2>
      <div
        className="portfolio-breakdown-metric huge"
      >
        <Measure
          metricKey="projects"
          metricType="SHORT_INT"
          value="0"
        />
      </div>
      <div
        className="portfolio-breakdown-box-link"
      >
        <div>
          <MeasuresLink
            component="foo"
            metric="projects"
          />
        </div>
      </div>
    </div>
    <div
      className="portfolio-breakdown-box"
    >
      <h2
        className="text-muted small"
      >
        portfolio.number_of_lines
      </h2>
      <div
        className="portfolio-breakdown-metric huge"
      >
        <Measure
          metricKey="ncloc"
          metricType="SHORT_INT"
          value="0"
        />
      </div>
      <div
        className="portfolio-breakdown-box-link"
      >
        <div>
          <MeasuresLink
            component="foo"
            label="portfolio.language_breakdown_link"
            metric="ncloc"
          />
        </div>
      </div>
    </div>
  </div>
  <WorstProjects
    component="foo"
    subComponents={Array []}
    total={0}
  />
</div>
`;

exports[`should render correctly: loading 1`] = `
<div
  className="page page-limited"
>
  <div
    className="text-center"
  >
    <i
      className="spinner spacer"
    />
  </div>
</div>
`;

exports[`should render correctly: portfolio is empty 1`] = `
<div
  className="page page-limited"
>
  <div
    className="empty-search"
  >
    <h3>
      portfolio.empty
    </h3>
  </div>
</div>
`;

exports[`should render correctly: portfolio is not computed 1`] = `
<div
  className="page page-limited"
>
  <div
    className="empty-search"
  >
    <h3>
      portfolio.not_computed
    </h3>
  </div>
</div>
`;
